--- a/til/entries/2023-05-20-eigengrau/index.html
+++ b/til/entries/2023-05-20-eigengrau/index.html
@@ -111,16 +111,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
+          <a href="/til/entries/2019-11-05-simulate network control" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Simulate network control</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">Various</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Java code comments</span>
+          <a href="/til/entries/2019-12-07-new-javascript-features" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">JavaScript Function string</span>
           </a>
         </article>
       </div>
