--- a/til/entries/2017-03-05-sms-length/index.html
+++ b/til/entries/2017-03-05-sms-length/index.html
@@ -111,16 +111,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2018-10-22-bash" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">.bash_profile vs .bashrc</span>
+          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-07-binding" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
+          <a href="/til/entries/2019-12-04-pid" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Waiting for process</span>
           </a>
         </article>
       </div>
