--- a/til/entries/2017-03-14-du/index.html
+++ b/til/entries/2017-03-14-du/index.html
@@ -120,16 +120,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-14-du" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">What is the difference between `du` and `df` command?</span>
+          <a href="/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Shortcut to forward standard output and error to another command</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">digrc</span>
+          <a href="/til/entries/2020-06-28-multiselect" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Empty multiselect is not set</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-12-04-pid" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Waiting for process</span>
+          <a href="/til/entries/2017-03-30-bash-shortcuts" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">BASH Shortcuts I was not not aware of</span>
           </a>
         </article>
       </div>
