--- a/til/entries/2019-11-05-simulate network control/index.html
+++ b/til/entries/2019-11-05-simulate network control/index.html
@@ -119,16 +119,16 @@ dropping.</p>
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
+          <a href="/til/entries/2017-03-29-uri" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Is URI case sensitive?</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
+          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
           </a>
         </article>
       </div>
