--- a/til/entries/2019-12-04-pid/index.html
+++ b/til/entries/2019-12-04-pid/index.html
@@ -108,16 +108,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">Java code comments</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-07-binding" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
+          <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Various</span>
           </a>
         </article>
       </div>
