--- a/til/entries/2019-12-07-new-javascript-features/index.html
+++ b/til/entries/2019-12-07-new-javascript-features/index.html
@@ -113,16 +113,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java code comments</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-05-sms-length" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">What is the max length of an SMS?</span>
+          <a href="/til/entries/2023-04-13-how-to-shallow-clone-git" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">How to Shallow Clone With Git</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2018-10-22-bash" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">.bash_profile vs .bashrc</span>
+          <a href="/til/entries/2019-12-07-new-javascript-features" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">JavaScript Function string</span>
           </a>
         </article>
       </div>
