--- a/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command/index.html
+++ b/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command/index.html
@@ -109,16 +109,16 @@ Usually I would do like this:</p>
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">digrc</span>
+          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          <a href="/til/entries/2017-03-30-bash-shortcuts" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">BASH Shortcuts I was not not aware of</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-04-13-how-to-shallow-clone-git" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">How to Shallow Clone With Git</span>
+          <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java code comments</span>
           </a>
         </article>
       </div>
